# PYRE

./: .gitignore  CONTRIBUTING.md  DECISIONS.md  LICENSE  Makefile  PYRE-MVP-Requirements.md  README.md  ROADMAP.MD  SKILL.md  canister_ids.json  dfx.json  pyproject.toml  setup.py  test-findings.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
docs/: README.md  adapters.md  analytics.md  api.md  assets.md  audit.md  candid-xnet.md  concepts.md  crypto.md  extending-with-rust.md  observability.md  oidc.md  quickstart.md  random-uuid-time.md  secrets-and-outcalls.md  static-serving.md  stdlib-matrix.md  tasks.md  testing.md  troubleshooting.md
examples/crypto_demo/src/: main.py
examples/food_tracker/src/: app.py  main.py
examples/full-stack-app/PyreBlog/: API.md  FRICTION.md  README.md  SPEC.PyreBlog.md
examples/full-stack-app/PyreBlog/backend/: .gitignore  README.md  build_native_mainnet.sh  canister_ids.json  dfx.json
examples/full-stack-app/PyreBlog/backend/scripts/: seed.sh  smoke.sh  smoke_comments.sh
examples/full-stack-app/PyreBlog/backend/src/: app.py  main.py
examples/full-stack-app/PyreBlog/backend/tests/: conftest.py  test_api_admin.py  test_api_lists.py  test_api_posts.py  test_certification.py  test_comments_auth.py  test_dev_login.py  test_feed_meta_seed.py  test_model.py  test_render.py  test_static_mount.py
examples/full-stack-app/PyreBlog/frontend/: .env  .env.development  .env.production  README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
examples/full-stack-app/PyreBlog/scripts/: e2e_integrated.sh
examples/oidc_spike/src/: main.py
examples/outbound/src/: app.py  supa_config.example.py
examples/phase1_spike/src/: main.py
examples/rest_api/src/: app.py
examples/static_demo/src/: app.py  main.py
examples/stdlib_audit/src/: main.py
examples/vnext_exercise/interfaces/: counter.did
examples/vnext_exercise/src/: app.py
internal-docs/: PYRE-v3.1Plus.md  PYRE-vNext-Implementation-and-Security-Review.md  PYRE-vNext-Manual-Testing-Guide.md  PYRE-vNext-Requirements-and-Technical-Spec.md
pyre/: __init__.py  _asset_store.py  _audit.py  _candid_codegen.py  _candid_parser.py  _lifecycle.py  _namespace.py  _platform.py  _runtime.py  analytics.py  application.py  assets.py  auth.py  candid.py  certification.py  cli.py  cors.py  crypto.py  data.py  dev.py  errors.py  gateway.py  http_types.py  kv.py  log.py  oidc.py  outcall.py  prandom.py  ptime.py  puuid.py  routing.py  sign.py  static.py  tasks.py  testing.py  transform.py  validation.py  xnet.py
pyre/adapters/: __init__.py  supabase.py  upstash.py
pyre/compat/: __init__.py  _stubs.py  urllib_request.py
pyre/templates/bare-api/: README.md
pyre/templates/bare-api/src/: app.py  main.py
pyre/templates/crud-kv/: README.md  dfx.json
pyre/templates/crud-kv/src/: app.py
pyre/templates/outbound-proxy/: .gitignore
pyre/templates/outbound-proxy/src/: app.py
pyre_native/: Cargo.toml
pyre_native/src/: pyre_native.rs
scripts/: budget_gate.sh  build_native.sh  build_wheel.sh  determinism_test.sh  e2e_local.sh  e2e_offline.py  mainnet_cost.sh  mainnet_gate.sh  mainnet_sign_gate.sh  measure_budgets.sh  pocketic_setup.sh  size_gate.sh  size_thresholds.env  teardown_mainnet.sh  verify_certification.py  verify_signature.py
scripts/bls-verify/: DECISIONS.md  package-lock.json  package.json  verify.mjs
tests/: conftest.py
tests/pocketic/: conftest.py  test_pocketic.py
tests/unit/: test_adapters.py  test_analytics.py  test_asset_store.py  test_assets.py  test_assets_cli.py  test_audit.py  test_auth.py  test_basic_auth.py  test_candid_codegen.py  test_candid_parser.py  test_candid_runtime.py  test_certification.py  test_cli_footguns.py  test_crypto.py  test_data.py  test_entropy_defusal.py  test_error_codes.py  test_gateway.py  test_kv.py  test_lifecycle.py  test_log.py  test_namespace.py  test_oidc.py  test_outcall.py  test_platform.py  test_prandom.py  test_ptime.py  test_pump_edges.py  test_routing.py  test_sign.py  test_static.py  test_stubs.py  test_tasks.py  test_template_vnext.py  test_testing_public_api.py  test_transform.py  test_wsa_surface.py  test_xnet.py
(+39 files in other folders)
