[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyre-icp"
version = "0.2.0"
description = "PYRE — Flask-flavored Python on the Internet Computer: certified reads, urllib-shaped outcalls, stable-memory collections"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["internet-computer", "icp", "canister", "web-framework", "kybra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.scripts]
pyre = "pyre.cli:main"

[tool.setuptools.packages.find]
include = ["pyre*"]

[tool.setuptools.package-data]
pyre = ["templates/*/**/*", "templates/*/**/.*"]
