[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyre-icp"
version = "1.1.0"
description = "PYRE — Flask-flavored Python on the Internet Computer: certified reads, urllib-shaped outcalls, stable-memory collections"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["internet-computer", "icp", "canister", "web-framework", "kybra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://github.com/Sweet-Papa-Technologies/PYRE"
Documentation = "https://github.com/Sweet-Papa-Technologies/PYRE/tree/main/docs"
Repository = "https://github.com/Sweet-Papa-Technologies/PYRE"
Issues = "https://github.com/Sweet-Papa-Technologies/PYRE/issues"
Changelog = "https://github.com/Sweet-Papa-Technologies/PYRE/blob/main/DECISIONS.md"

[project.scripts]
pyre = "pyre.cli:main"

[tool.setuptools.packages.find]
include = ["pyre*"]

[tool.setuptools.package-data]
pyre = ["templates/*/**/*", "templates/*/**/.*"]
